@@ -178,6 +178,11 @@ deterministic (the default is <code>false</code>).
 <dd>Two aliases for a predefined material type with a dielectric
 constant of 1.
 
+<dt><code>nothing</code> [<code>material-type</code> class]
+<dd>A material that, effectively, punches a hole through other
+objects to the background (<code>default-material</code> or
+<code>epsilon-input-file</code>).
+
 <p><dt><code>infinity</code> [<code>number</code>]
 <dd>A big number (1.0e20) to use for "infinite" dimensions of objects.
 
