@@ -677,7 +677,7 @@ cylinder (within a radius 1.0 of the origin):
  "energy in cylinder: "
  (compute-energy-in-objects (make cylinder (center 0 0 0)
                                   (radius 1.0) (height infinity)
-                                  (material air)))
+                                  (material nothing)))
  "\n")
 </pre>
 
